Fix some long-running inconcistencies of inline form elements (primarily on Firefox)

--- a/sass/_buttons.scss
+++ b/sass/_buttons.scss
@@ -20,11 +20,12 @@ input[type="button"],
 	@include background-clip;
 	@include box-sizing;
 	width: auto;
-	height: 2em; // 24px / 12px
+	height: 2em; // 26px / 13px
 	overflow: visible;
 	font-family: $font-body;
-	font-size: .92307692307692em;  // 12px / 13px
-	line-height: 1.33333333333333; // 16px / 12px
+	font-size: 1em;
+	line-height: $baseline; // 18px / 13px
+	vertical-align: middle;
 	text-decoration: none;
 	@include text-shadow-light;
 	cursor: pointer;
@@ -32,7 +33,7 @@ input[type="button"],
 	border: 1px solid #bbb;
 	border-bottom-color: darken(#bbb, 10%);
 	@include border-radius($border-radius);
-	padding: .25em .75em; // 3px / 12px + 9px / 12px
+	padding: .25em .75em;
 	display: inline-block;
 	color: $color-text;
 	@include box-shadow(inset 0 1px 0 0 rgba(#fff, .25));
@@ -52,12 +53,13 @@ input[type="button"],
 .navlink-disabled {
 	@include background-clip;
 	@include box-sizing;
-	height: 2em; // 24px / 12px
-	font-size: .92307692307692em;  // 12px / 13px
-	line-height: 1.33333333333333; // 16px / 12px
+	height: 2em; // 26px / 13px
+	font-size: 1em;
+	line-height: $baseline; // 18px / 13px
+	vertical-align: middle;
 	border: 1px solid;
 	@include border-radius($border-radius);
-	padding: .30769230769231em .75em;
+	padding: .25em .75em;
 	display: inline-block;
 }
 
