--- a/sass/textpattern.scss
+++ b/sass/textpattern.scss
@@ -118,7 +118,7 @@ body {
 
 .txp-logout {
 	position: absolute;
-	top: -.5em;
+	top: -.53846153846154em; // 7px / 13px
 	right: 1.69%;
 }
 
